sample/workloadentry/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: workloadentry-test-01
  namespace: envoy-test
spec:
  containers:
  - name: workloadentry-test
    image: louhwz/http_server_print_env:0.1
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  restartPolicy: Always
---
apiVersion: v1
kind: Pod
metadata:
  name: workloadentry-test-02
  namespace: envoy-test
spec:
  containers:
  - name: workloadentry-test
    image: louhwz/http_server_print_env:0.1
    imagePullPolicy: IfNotPresent
    ports:
    - containerPort: 80
  restartPolicy: Always
