sample/workloadentry/2_serviceentry_endpoint.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: prinenv
  namespace: istio-test
spec:
  hosts:
  - printenv
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 80
  resolution: STATIC
  endpoints:
    - address: 10.36.0.7
      weight: 100
    - address: 10.36.0.6
      weight: 10000
---
