sample/workloadentry/serviceentry_labelselector.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: labelselector
  namespace: envoy-test
spec:
  hosts:
  - labelselector.test.com
  location: MESH_INTERNAL
  ports:
  - number: 80
    name: http
    protocol: HTTP
    targetPort: 80
  resolution: STATIC
  workloadSelector:
    labels:
      app: workloadentry-test
